Henter alle bedrifter fra altinn for å populere bedriftsmeny
Co-authored-by: Sindre Løken <sindre.loken@nav.no>