@@ -3,6 +3,7 @@ package no.nav.tag.tiltaksgjennomforing;
 import no.nav.tag.tiltaksgjennomforing.autorisasjon.InnloggetDeltaker;
 import no.nav.tag.tiltaksgjennomforing.autorisasjon.InnloggetVeileder;
 import no.nav.tag.tiltaksgjennomforing.autorisasjon.InnloggetArbeidsgiver;
+import no.nav.tag.tiltaksgjennomforing.autorisasjon.altinntilgangsstyring.AltinnOrganisasjon;
 import no.nav.tag.tiltaksgjennomforing.autorisasjon.veilarbabac.TilgangskontrollService;
 import no.nav.tag.tiltaksgjennomforing.avtale.*;
 import no.nav.tag.tiltaksgjennomforing.orgenhet.ArbeidsgiverOrganisasjon;
@@ -15,9 +16,7 @@ import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 import static java.util.Collections.emptyList;
 import static org.mockito.Mockito.mock;
@@ -190,7 +189,7 @@ public class TestData {
     }
 
     public static InnloggetArbeidsgiver enInnloggetArbeidsgiver() {
-        return new InnloggetArbeidsgiver(new Fnr("99999999999"), emptyList(), Collections.emptySet());
+        return new InnloggetArbeidsgiver(new Fnr("99999999999"), Map.of(), Collections.emptySet());
     }
 
     public static InnloggetVeileder enInnloggetVeileder() {
@@ -239,9 +238,10 @@ public class TestData {
     }
 
     public static InnloggetArbeidsgiver innloggetArbeidsgiver(Avtalepart<Fnr> avtalepartMedFnr) {
-        ArbeidsgiverOrganisasjon organisasjon = new ArbeidsgiverOrganisasjon(avtalepartMedFnr.getAvtale().getBedriftNr(), avtalepartMedFnr.getAvtale().getBedriftNavn());
-        organisasjon.getTilgangstyper().addAll(List.of(Tiltakstype.values()));
-        return new InnloggetArbeidsgiver(avtalepartMedFnr.getIdentifikator(), List.of(organisasjon), Collections.emptySet());
+        Avtale avtale = avtalepartMedFnr.getAvtale();
+        Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.values()));
+        AltinnOrganisasjon altinnOrganisasjon = new AltinnOrganisasjon(avtale.getBedriftNavn(), "Business", avtale.getBedriftNr().asString(), "BEDR", "Active", null);
+        return new InnloggetArbeidsgiver(avtalepartMedFnr.getIdentifikator(), tilganger, Set.of(altinnOrganisasjon));
     }
 
     public static InnloggetDeltaker innloggetDeltaker(Avtalepart<Fnr> avtalepartMedFnr) {
